# ipylab

./: .copier-answers.yml  .eslintignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  RELEASE.md  environment.yml  install.json  ipylab.json  package.json  postBuild  pyproject.toml  pytest.ini  readthedocs.yml  ruff_defaults.toml  setup.cfg  setup.py  setupbase.py  tsconfig.json  tslint.json  webpack.config.js
.binder/: environment.yml  postBuild
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  full-release.yml  lint.yml  packaging.yml  pre-commit.yml  prep-release.yml  publish-release.yml  publish.yml
css/: widget.css
docs/: Makefile  conf.py  environment.yml  jupyter_lite_config.json  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: Untitled.ipynb  autostart.ipynb  commands.ipynb  contents.ipynb  generic.ipynb  icons.ipynb  introduction.ipynb  ipytree.ipynb  main_area.ipynb  menus.ipynb  plugins.ipynb  sessions.ipynb  toolbar.ipynb  widgets.ipynb
ipyfbl/: __init__.py  _frontend.py  _version.py  commands.py  jupyterfrontend.py
ipyfbl/tests/: test_nbextension_path.py
ipylab/: __init__.py  __main__.py  _backend.py  _frontend.py  _plugin_manger.py  _version.py  asyncwidget.py  awaitable.py  commands.py  common.py  connection.py  contents.py  dialog.py  disposable_connection.py  hasapp.py  hookspecs.py  icon.py  ipylab.py  ipylab_backend.py  jupyterfrontend.py  jupyterfrontend_subsection.py  labapp.py  lib.py  luminowidget_connection.py  main_area.py  menu.py  notification.py  scripts.py  sessions.py  shell.py  sub.py  toolbar.py  widgets.py
ipylab/_compat/: enum.py  typing.py
ipylab/nbextension/: __init__.py
ipylab/nbextension/static/: extension.js
ipylab/tests/: conftest.py  test_example.py  test_nbextension_path.py
pkg/: ipywidgets-8.1.5-py3-none-any.whl  jupyterlab_widgets-3.0.13-py3-none-any.whl  widgetsnbextension-4.0.13-py3-none-any.whl
src/: extension.ts  index.ts  plugin.ts  restorable.ts  utils.ts  version.ts  widget.ts
src/widgets/: autostart.ts  backend.ts  commands.ts  connection.ts  contents.ts  disposable_connection.ts  frontend.ts  icon.ts  ipylab.ts  ipylab_kernel.ts  luminowidget_connection.ts  main_area.ts  menu.ts  notification.ts  palette.ts  panel.ts  python_backend.ts  sessions.ts  shell.ts  split_panel.ts  title.ts  toolbar.ts  utils.ts
style/: style.js  widget.css
tests/src/: index.spec.ts
