[build-system]
requires = [
  "hatchling>=1.5.0",
  "jupyterlab>=4.1.0,<5",
  "hatch-nodejs-version>=0.3.2",
]
build-backend = "hatchling.build"

[project]
name = "ipylab"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 4",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

dependencies = ["jupyterlab~=4.1", "ipywidgets~=8.1", "pluggy~=1.1"]

[project.optional-dependencies]
dev = ["hatch", "ruff", "pre-commit"]
test = ["pytest"]

[project.scripts]
ipylab = "ipylab:scripts.launch_jupyterlab"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["ipylab/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"ipylab/labextension" = "share/jupyter/labextensions/ipylab"
"install.json" = "share/jupyter/labextensions/ipylab/install.json"

[tool.hatch.build.targets.wheel.force-include]
"ipylab/labextension/package.json" = "ipylab/labextension/package.json"

[tool.hatch.build.hooks.version]
path = "ipylab/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "ipylab/labextension/static/style.js",
  "ipylab/labextension/package.json",
]
install-pre-commit-hook = true
skip-if-exists = ["ipylab/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "ipylab/labextension"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
  "python -m pip install 'jupyterlab>=4.0.0,<5'",
  "jlpm",
  "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
extend = "ruff_defaults.toml"
target-version = "py311"


[tool.codespell]
skip = 'yarn.lock,node_modules*,lib,.yarn*,./ipylab*'
ignore-words-list = 'statics'
write = true

[tool.ruff.lint]
extend-select = [
  "PTH",  # flake8-use-pathlib
  "NPY",  # NumPy specific rules
  "PD",   # pandas-vet
  "FURB", # refurb
]
ignore = ["BLE001", "N802", "N803"]
[tool.ruff.format]
docstring-code-format = true
