[metadata]
name = ipylab
description = Control JupyterLab from Python Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = ipylab contributors
url = https://github.com/jtpio/ipylab
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Widgets, IPython
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    ipywidgets>=7.6.0,<8

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    black
    pre-commit
docs =
   sphinx>=1.5
   recommonmark
   sphinx_rtd_theme
   nbsphinx>=0.2.13,<0.4.0
   jupyter_sphinx
   nbsphinx-link
   pytest_check_links
   pypandoc
